Clean yum cache during build.

--- a/graphite-web/Dockerfile
+++ b/graphite-web/Dockerfile
@@ -1,7 +1,8 @@
 FROM rhel7.1
 
-RUN yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-RUN yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms --enablerepo=rhel-7-server-optional-rpms --enablerepo=epel graphite-web graphite-web-selinux MySQL-python
+RUN yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
+    && yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms --enablerepo=rhel-7-server-optional-rpms --enablerepo=epel graphite-web graphite-web-selinux MySQL-python \
+    && yum clean all
 
 COPY local_settings.py /etc/graphite-web/local_settings.py
 COPY graphite-web.conf /etc/httpd/conf.d/graphite-web.conf
