--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -4,7 +4,8 @@ MAINTAINER Alex Smith <alex.smith@redhat.com>
 
 COPY graphite.sql /tmp/graphite.sql
 
-RUN yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms mariadb-server
+RUN yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms mariadb-server \
+    && yum clean all
 
 RUN /usr/bin/mysql_install_db --datadir=/var/lib/mysql --user=mysql --skip-name-resolve
 
