--- a/graphite-carbon/Dockerfile
+++ b/graphite-carbon/Dockerfile
@@ -6,6 +6,9 @@ RUN yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms https://dl.fe
     && yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms --enablerepo=rhel-7-server-optional-rpms --enablerepo=epel python-carbon \
     && yum clean all
 
+ADD rhel/etc/carbon/carbon.conf /etc/carbon/carbon.conf
+ADD rhel/etc/carbon/storage-schemas.conf /etc/carbon/storage-schemas.conf
+
 VOLUME ["/var/lib/carbon"]
 
 EXPOSE 2003 2004 7002
