Remove unneeded repo from Graphite Web image build.

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,7 +3,7 @@ FROM rhel:7.2
 MAINTAINER Alex Smith <alex.smith@redhat.com>
 
 RUN yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
-    && yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms --enablerepo=rhel-7-server-optional-rpms --enablerepo=epel graphite-web graphite-web-selinux MySQL-python \
+    && yum install -y --disablerepo=* --enablerepo=rhel-7-server-rpms --enablerepo=epel graphite-web graphite-web-selinux MySQL-python \
     && yum clean all
 
 ADD rhel/etc/graphite-web/dashboard.conf /etc/graphite-web/dashboard.conf
